wraps gluten big fix

--- a/css/style.css
+++ b/css/style.css
@@ -608,31 +608,52 @@ img {
 }
 
 
+/*
+.souvlaki .gluten-free {
+    width: 2.5rem;  can't use vw or vh bc need cirlce 
+    height: 2.5rem;
+    border-radius: 50%;
+    background-color: white;
+    text-align: center;
+}
+
+.souvlaki .gluten-free-text {
+    color: black;
+    width: 2.4rem;
+    transform: rotate(15deg);
+    padding: 0.4rem 0 0 0.1rem;
+    font-size: 0.45em;
+}
+*/
+
 .tortilla .gluten-free {
-    width: 60px;
-    height: 60px;
+    width: 2.5rem;
+    height: 2.5rem;
     border-radius: 50%;
     background-color: black;
+    text-align: center;
 
     position: absolute;
-    top: -5px;
-    right: 180px;
+    top: -0.1rem;
+    right: 14vw;  
 }
 
 .tortilla .gluten-free-text {
+
     color: white;
+    /*width: 2.4rem; */
     transform: rotate(15deg);
-    padding: 15px 0 0 10px; 
-    font-size: 10px;
+    padding: 0.5rem 0 0 0.1rem;
+    font-size: 0.45em;
 }
 
 .tortilla .check {
     color: white;
-    font-size: 30px;
+    font-size: 1.5em;
     transform: rotate(15deg);
     position: absolute;
-    top: 33px;
-    left: 13px;
+    top: 1.25rem;
+    left: 0.55rem;
 }
 
 
